get correct rain intensities. add styling to table for better readability of how intense the rain is. Change graph to show average rain intneies of routes rather than amunt of rain.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -68,3 +68,11 @@ app-route-data-table {
         font-size: 12px;
     }
 }
+
+.rainIntensityIndictor {
+    width: 80px;
+    border-radius: 5px;
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: bold;
+}
